--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url('milky-way-starry-sky-night-sky-star-956999.jpeg') no-repeat center center fixed;
+    background: url('fundo.jpeg') no-repeat center center fixed;
     background-size: cover;
     font-family: 'Bai Jamjuree', sans-serif;
 }
